# better-exceptions

./: .editorconfig  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  better_exceptions_hook.pth  byomkesh_bakshi_hook.pth  pyproject.toml  setup.py  test_all.sh  test_bug.py  test_color.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  push.yml
better_exceptions/: __init__.py  __main__.py  color.py  encoding.py  formatter.py  highlighter.py  log.py  repl.py
better_exceptions/core/: __init__.py  encoding.py  log.py
better_exceptions/integrations/: django.py
byomkesh_bakshi/: __init__.py  __main__.py  error.json  formatter.py  log.py  repl.py  translate.py
test/: test.py  test.py.out  test_attributes.py  test_attributes.sh  test_chaining.py  test_color.py  test_encoding.py  test_env.py  test_file_without_colors.py  test_indentation_error.py  test_interactive.sh  test_interactive_raw.sh  test_logging.py  test_long_text_encoding.py  test_multilines_repr.py  test_source_multilines.py  test_source_strings.py  test_string.sh  test_syntax_error.py  test_truncating.py  test_truncating_disabled.py  test_unittest_patch.py
test/output/: python-dumb-UTF-8-color.out  python-dumb-UTF-8-nocolor.out  python-dumb-ascii-color.out  python-dumb-ascii-nocolor.out  python-vt100-UTF-8-nocolor.out  python-vt100-ascii-color.out  python-vt100-ascii-nocolor.out  python-xterm-UTF-8-color.out  python-xterm-UTF-8-nocolor.out  python2-dumb-UTF-8-color.out  python2-dumb-UTF-8-nocolor.out  python2-dumb-ascii-color.out  python2-dumb-ascii-nocolor.out  (+24 more)
(+3 files in other folders)
